# cppzmq

./: CMakeLists.txt
patches/: libzmq.patch
